# geicar

./: .gitignore  CMakeLists.txt  README.md
Projet_STM32/CarteCommandeTricycle/: CarteCommandeTricycle.ioc
Simulation/: ros_list.py  ros_pub.py
discovery/: Voiture-Siec.elf.launch  stm32f30_flash.ld
discovery/AHRS/: sensors.h  stm32f3_discovery_l3gd20.c  stm32f3_discovery_lsm303dlhc.c  stm32f3xx_AHRS_it.h
discovery/Debug/: Voiture-Siec.elf  Voiture-Siec.list  Voiture-Siec.map
discovery/Debug/AHRS/: MadgwickAHRS.su  MahonyAHRS.su  stm32f3_discovery_l3gd20.su  stm32f3xx_AHRS_it.su
discovery/Debug/src/: main.su  stm32f3_discovery.su  stm32f3xx_hal_msp.su  stm32f3xx_it.su
discovery/src/: main.h  stm32f3xx_it.h  tiny_printf.c
documentation/: introduction.md  topologie.drawio
documentation/hardware/: hardware_overview.md
documentation/hardware/electronic/: electronic_overview.md
documentation/software/: software_overview.md
documentation/software/discovery/: discovery_overview.md
documentation/software/nucleo/: nucleo_overview.md
function_0-PC/: README.md
function_0-PC/ros_dashboard/: CMakeLists.txt  package.xml
function_0-PC/ros_dashboard/scripts/: ros_dashboard.py
function_0-PC/ros_emergency_stop/: CMakeLists.txt  package.xml
function_0-PC/ros_emergency_stop/scripts/: ros_emergency_stop.py
function_1-Lidar/documentation/: README.md
function_2-Jetson/documentation/: README.md
function_3-Radar/: CMakeLists.txt  README.md  radar_dump.txt
function_3-Radar/documentation/: README.md
function_3-Radar/driver/: CMakeLists.txt
function_3-Radar/driver/include/: Config.hpp  Measure.hpp  Message.hpp  Radar.hpp  util.hpp
function_3-Radar/driver/src/: Config.cpp  Measure.cpp  Message.cpp  Radar.cpp
function_3-Radar/logger/: CMakeLists.txt  Main.cpp
function_3-Radar/obstacle_detection/: CMakeLists.txt  Main.cpp  package.xml
function_3-Radar/radar/: CMakeLists.txt  Main.cpp  package.xml
function_3-Radar/radar_messages/: CMakeLists.txt  package.xml
function_3-Radar/radar_messages/msg/: object.msg
function_3-Radar/radar_msgs/: CMakeLists.txt
function_3-Radar/radar_msgs/include/: Config.hpp  Measure.hpp  Message.hpp
function_3-Radar/radar_msgs/src/: Config.cpp  Measure.cpp  Message.cpp
function_3-Radar/radar_ros_msgs/: CMakeLists.txt  package.xml
function_3-Radar/radar_ros_msgs/include/: radar_msgs_translate.hpp
function_3-Radar/radar_ros_msgs/msg/: frame.msg
function_3-Radar/radar_ros_msgs/src/: radar_msgs_translate.cpp
function_3-Radar/ros_node/: CMakeLists.txt  Main.cpp  package.xml
function_3-Radar/ros_radar/: CMakeLists.txt  Main.cpp  package.xml
function_3-Radar/ros_visualizer/: CMakeLists.txt  Main.cpp  package.xml
function_3-Radar/test/: CMakeLists.txt  catch_test.cpp
function_3-Radar/util/: CMakeLists.txt
function_3-Radar/util/src/: util.cpp
function_3-Radar/visualizer/: CMakeLists.txt  Main.cpp  RadarVisualizer.cpp  RadarVisualizer.hpp
function_3-Radar/visualizer/include/: RadarVisualizer.hpp
function_3-Radar/visualizer/src/: RadarVisualizer.cpp
function_4-US/Ultrasound_V2/: .cproject  .mxproject  .project  Ultrasound_V2 Debug.launch  Ultrasound_V2.ioc
function_4-US/Ultrasound_V2/Debug/: Ultrasound_V2.list  makefile
function_4-US/documentation/: README.md
function_5-Motor-Direction-IMU/: README.md
function_5-Motor-Direction-IMU/STM32TricycleProject/: CarteCommandeTricycle.ioc  README.md
function_5-Motor-Direction-IMU/documentation/: README.md
function_5-Motor-Direction-IMU/ros_stm32_can/: CMakeLists.txt  Main.cpp  package.xml
function_5-Motor-Direction-IMU/stm32_can_receiver/: CMakeLists.txt  Main.cpp  package.xml
function_5-Motor-Direction-IMU/stm32_ros_msgs/: CMakeLists.txt  package.xml
function_5-Motor-Direction-IMU/stm32_ros_msgs/srv/: brakes.srv  emergency_stop.srv  motor.srv  steering.srv
function_6-Xbox_Controler/documentation/: README.md
function_7-GPS/documentation/: README.md
function_8-Camera/documentation/: README.md
function_9-Ground-PC/systemd-service/: intel-net-workaroud.service
geibike/documentation/: topologie.drawio
geicar/discovery/: README.md
geicar/discovery/AHRS/: sensors.c  stm32f3_discovery_l3gd20.h  stm32f3_discovery_lsm303dlhc.h  stm32f3xx_AHRS_it.c
geicar/discovery/src/: main.c  stm32f3xx_hal_conf.h  stm32f3xx_hal_msp.c  stm32f3xx_it.c
geicar/documentation/: topologie.drawio
geicar/nucleo/: .mxproject  voiture-elec.ioc
geicar/nucleo/Inc/: can.h  stm32f1xx_hal_conf.h
geicar/nucleo/MDK-ARM/: startup_stm32f103xb.lst  voiture-elec.uvprojx
geicar/nucleo/Src/: can.c  gpio.c  main.c  wheels.c
geicar/raspberry/TestUI/: README.md  TestUI.sln
geicar/raspberry/server/: server.py
launch_files/: dashboard.launch  main.launch  radar_reel.launch  radar_simu.launch  sudo_roslaunch.sh
nucleo/: mx.scratch  voiture-elec.txt
nucleo/Inc/: main.h  power.h  steering.h  stm32f1xx_it.h  tim.h  wheels.h
nucleo/MDK-ARM/: startup_stm32f103xb.lst  voiture-elec.uvoptx  voiture-elec.uvprojx
nucleo/MDK-ARM/voiture-elec/: adc.crf  adc.d  can.crf  can.d  dma.crf  dma.d  gpio.crf  gpio.d  main.crf  main.d  startup_stm32f103xb.d  stm32f1xx_hal.crf  stm32f1xx_hal.d  stm32f1xx_hal_adc.crf  stm32f1xx_hal_adc.d  stm32f1xx_hal_adc_ex.crf  stm32f1xx_hal_adc_ex.d  stm32f1xx_hal_can.crf  stm32f1xx_hal_can.d  stm32f1xx_hal_cortex.crf  stm32f1xx_hal_cortex.d  stm32f1xx_hal_dma.crf  stm32f1xx_hal_dma.d  stm32f1xx_hal_flash.crf  stm32f1xx_hal_flash.d  stm32f1xx_hal_flash_ex.crf  stm32f1xx_hal_flash_ex.d  stm32f1xx_hal_gpio.crf  stm32f1xx_hal_gpio.d  stm32f1xx_hal_gpio_ex.crf  stm32f1xx_hal_msp.d  (+30 more)
nucleo/Src/: adc.c  can.c  gpio.c  main.c  power.c  steering.c  stm32f1xx_it.c  tim.c  wheels.c
path_planner/: CAN_BUS_listenner.py  algo.py  get_radar.py  gui.py  helo_qt.py  nav_mesh.py  obstacles_real.txt  path.pickle  path.py  path_convert.py  path_test.pickle  pyqt5.py  radar_simplify.py  readme.md
raspberry/TestUI/: README.md
raspberry/bluetooth/: README.md
raspberry/nodejs/: README.md  app.js  can-struct.js  package.json
raspberry/server/: README.md  server.py
(+135 files in other folders)
