<?xml version="1.0"?>
<package format="2">
    <name>ros_dashboard</name>
    <version>0.0.1</version>
    <description>
        A simple interface to control the tricycle actuators
    </description>

    <maintainer email="ysimard@insa-toulouse.fr">yohan</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>stm32_ros_msgs</depend>

    <export>
    </export>
</package>
