<?xml version="1.0"?>
<package format="2">
    <name>obstacle_detection</name>
    <version>0.0.1</version>
    <description>A packages that publish if an obstacle is detected by the radar</description>

    <maintainer email="ysimard@insa-toulouse.fr">yohan</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>

    <export>
    </export>
</package>
