<?xml version="1.0"?>
<package format="2">
    <name>radar</name>
    <version>0.0.1</version>
    <description>This packages publishes the coordinates of all objects detected by the radar</description>

    <maintainer email="ysimard@insa-toulouse.fr">yohan</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>radar_messages</depend>

    <export>
    </export>
</package>
