<?xml version="1.0"?>
<package format="2">
    <name>radar_ros_msgs</name>
    <version>0.0.1</version>
    <description>This packages contains the ROS messages to communicate with radar_node</description>

    <maintainer email="ysimard@insa-toulouse.fr">yohan</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <exec_depend>message_runtime</exec_depend>
    <build_depend>message_generation</build_depend>

    <export>
    </export>
</package>
