<?xml version="1.0"?>
<package format="2">
    <name>stm32_can_receiver</name>
    <version>0.0.1</version>
    <description>
        A package that publishes the messages sent on the CAN bus by the STM32 (ultrasound sensor
        measures, initialization, etc.)
    </description>

    <maintainer email="ysimard@insa-toulouse.fr">yohan</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>stm32_ros_msgs</depend>

    <export>
    </export>
</package>
